--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
@@ -10,5 +10,5 @@
 		<div class="container">
 		</div>
   </body>
-  <script src="/bundle.js"></script>
+  <script src="bundle.js"></script>
 </html>
